# prisoners-dilemma-2026-01

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: player_submission.yml
.github/scripts/: handle_submission.py
.github/workflows/: handle_submission.yml
notebooks/: README.md  Template.ipynb
tournament/: __init__.py
tournament/engine/: __init__.py  referee.py  tournament.py  validation.py
tournament/players/: __init__.py  _registry.py  cooperator.py  defector.py  random_player.py
tournament/scripts/: build_registry.py  run_tournament.py  validate_player.py  watch_players.py
